* configure.in: AC_REQUIRE is not valid outside of AC_DEFUN. * automake/dpkg.m4: DPKG_CACHED_TRY_COMPILE was defined with both AC_DEFUN() AND define().

--- a/configure.in
+++ b/configure.in
@@ -83,8 +83,8 @@ if test "`cd $srcdir && pwd`" != "`pwd`" && test -f $srcdir/config.status; then
 fi
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE", [Name of package])
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION", [Version number of package])
-AC_REQUIRE([AC_ARG_PROGRAM])
-AC_REQUIRE([AC_PROG_MAKE_SET])
+AC_ARG_PROGRAM
+AC_PROG_MAKE_SET
 
 AC_MSG_CHECKING(dpkg version)
 AC_MSG_RESULT($VERSION)
