Let's use the CPPFLAGS set at configure time.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -50,6 +50,7 @@ CFLAGS			= @CFLAGS@ @CWARNS@
 CXX			= @CXX@
 CXXFLAGS		= @CXXFLAGS@
 
+CPPFLAGS		= @CPPFLAGS@
 LD			= @LD@
 LDFLAGS			= @LDFLAGS@ -L../lib -L../optlib
 LIBS			= @LIBS@ -ldpkg -lopt $(ZLIB_LIBS)
@@ -68,7 +69,7 @@ ZLIB_CFLAGS		= @ZLIB_CFLAGS@
 ZLIB_LIBS		= @ZLIB_LIBS@
 ZLIB_LIBS_ALSO_STATIC	= @ZLIB_LIBS_ALSO_STATIC@
 
-ALL_CFLAGS		= $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS) 
+ALL_CFLAGS		= $(CPPFLAGS) $(CFLAGS) $(DEFS) $(NLS_CFLAGS) $(INCLUDE_CFLAGS) $(ZLIB_CFLAGS)
 ALL_CXXFLAGS		= $(ALL_CFLAGS) $(CXXFLAGS)
 
 ALSO_STATIC		= @ALSO_STATIC@
