--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -3,6 +3,7 @@
  * dpkg.h - general header for Debian package handling
  *
  * Copyright (C) 1994,1995 Ian Jackson <iwj10@cus.cam.ac.uk>
+ * Copyright (C) 2000,2001 Wichert Akkerman <wichert@debian.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -190,6 +191,7 @@ void werr(const char *what) NONRETURNING;
 
 /*** from mlib.c ***/
 
+void setcloexec(int fd, const char* fn);
 void *m_malloc(size_t);
 void *m_realloc(void*, size_t);
 int m_fork(void);
