--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,13 @@ Maintainer: Wichert Akkerman <wakkerma@debian.org>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
-Build-Depends: debiandoc-sgml, libncurses-dev, gettext (>= 0.10.36), zlib1g-dev
+Build-Depends: debiandoc-sgml, sgmltools-lite, libncurses-dev, gettext (>= 0.10.36), zlib1g-dev
 
 Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
-Depends: sysvinit (>= 2.72)
+Conflicts: sysvinit (<< 2.72)
 Replaces: dpkg-doc-ja, dpkg-static
 Conflicts: dpkg-static
 Description: Package maintenance system for Debian
