--- a/configure.in
+++ b/configure.in
@@ -250,6 +250,7 @@ optlib/Makefile
 doc/Makefile
 doc/fr/Makefile
 doc/ja/Makefile
+doc/ru/Makefile
 doc/sv/Makefile
 scripts/Makefile
 main/Makefile
