install dpkg-query as well

--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -44,6 +44,7 @@ install-program:
 ifdef ALSO_STATIC
 	$(INSTALL_PROGRAM) dpkg-static $(DESTDIR)/$(bindir)
 endif
+	$(INSTALL_PROGRAM) dpkg-query $(DESTDIR)/$(bindir)
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/alternatives
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/info
 	$(mkinstalldirs) $(DESTDIR)/$(admindir)/updates
