--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -10,12 +10,12 @@ BIN_SCRIPTS		= dpkg-name dpkg-source dpkg-genchanges \
 			  dpkg-scanpackages dpkg-scansources \
 			  dpkg-architecture dpkg-checkbuilddeps
 
-SBIN_SCRIPTS		= update-rc.d update-alternatives install-info \
+SBIN_SCRIPTS		= update-alternatives install-info \
 			  dpkg-divert dpkg-statoverride cleanup-info
 
 MAN1PAGES		= dpkg-name.1 dpkg-source.1 822-date.1 \
 			  dpkg-checkbuilddeps.1
-MAN8PAGES		= update-rc.d.8 update-alternatives.8 install-info.8  \
+MAN8PAGES		= update-alternatives.8 install-info.8  \
 			  cleanup-info.8 dpkg-scanpackages.8 dpkg-scansources.8 \
 			  dpkg-divert.8 dpkg-statoverride.8
 
