add main/query.c and main/showpkg.c

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -29,6 +29,9 @@ main/remove.c
 main/select.c
 main/update.c
 
+main/query.c
+main/showpkg.c
+
 dpkg-deb/build.c
 dpkg-deb/extract.c
 dpkg-deb/info.c
