--- a/debian/control
+++ b/debian/control
@@ -61,7 +61,7 @@ Description: Package building tools for Debian
  for example, most packages need the `make' and the C compiler `gcc'.
 
 Package: dpkg-doc
-Section: docs
+Section: doc
 Priority: optional
 Architecture: all
 Replaces: dpkg-dev (<<1.4.1.19)
@@ -74,8 +74,8 @@ Description: Dpkg Internals Documentation
 Package: dselect
 Architecture: any
 Depends: ${shlibs:Depends}
-Replaces: dpkg (>= 1.9.10)
-Description: a user tool to manage Debian GNU/Linux packages
+Replaces: dpkg (<< 1.10)
+Description: a user tool to manage Debian packages
  dselect is the primary user interface for installing, removing and
- managing Debian GNU/Linux packages. It is an front-end to dpkg.
+ managing Debian packages. It is an front-end to dpkg.
 
