--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -63,7 +63,7 @@ dpkg-static: LDFLAGS += -static
 dpkg dpkg-static: $(OBJECTS) ../lib/libdpkg.a
 	$(CC) $(LDFLAGS) -o $@ $(OBJECTS) $(LIBS) $(NLS_LIBS)
 
-dpkg-query: $(QUERY_BJECTS) ../lib/libdpkg.a
+dpkg-query: $(QUERY_OBJECTS) ../lib/libdpkg.a
 	$(CC) $(LDFLAGS) -o $@ $(QUERY_OBJECTS) $(LIBS) $(NLS_LIBS)
 
 enquiry.o: archtable.h
