--- a/debian/rules
+++ b/debian/rules
@@ -106,7 +106,7 @@ binary-dpkg-most binary-dpkg-static-most: binary-dpkg%-most: stamp-binary%
 			fi ; \
 		done ; \
 		install -d -m 755 -o root -g root $(TMP_DPKG)/usr/share/man/$$i/man8 ; \
-		for m in dpkg.8 dpkg-split.8 start-stop-daemon.8 \
+		for m in dpkg.8 dpkg-query.8 dpkg-split.8 start-stop-daemon.8 \
 		    	cleanup-info.8 dpkg-divert.8 dpkg-statoverride.8 \
 			install-info.8 update-alternatives.8 ; do \
 			if [ -f $(INSTALL_TMP)/usr/share/man/$$i/man8/$$m ] ; then \
