--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -9,7 +9,7 @@ SOURCES		= main.c enquiry.c filesdb.c archives.c processarc.c \
 		  cleanup.c select.c packages.c configure.c remove.c \
 		  help.c depcon.c errors.c update.c 
 
-MAN8PAGES	= dpkg.8
+MAN8PAGES	= dpkg.8 dpkg-query.8
 
 OBJECTS		= $(patsubst %.c, %.o, $(SOURCES))
 GENFILES	= $(OBJECTS) archtable.h dpkg dpkg-static
