Slight language fix

--- a/debian/control
+++ b/debian/control
@@ -77,5 +77,5 @@ Depends: ${shlibs:Depends}
 Replaces: dpkg (<< 1.10)
 Description: a user tool to manage Debian packages
  dselect is the primary user interface for installing, removing and
- managing Debian packages. It is an front-end to dpkg.
+ managing Debian packages. It is a front-end to dpkg.
 
