--- a/doc/fr/Makefile.in
+++ b/doc/fr/Makefile.in
@@ -12,7 +12,8 @@ MAN1PAGES	= dpkg-deb.1 dpkg-name.1 dpkg-source.1
 MAN5PAGES	= deb-control.5
 MAN8PAGES	= cleanup-info.8 dpkg.8 dpkg-divert.8 dpkg-scanpackages.8 \
 			dpkg-scansources.8 install-info.8 start-stop-daemon.8 \
-			update-alternatives.8
+			update-alternatives.8 dpkg-statoverride.8 dpkg-split.8 \
+			dpkg-query.8
 
 all: 
 
