Move showpkg.c to lib/ so multiple tools can use it

--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -14,7 +14,7 @@ MAN8PAGES	= dpkg.8 dpkg-query.8
 OBJECTS		= $(patsubst %.c, %.o, $(SOURCES))
 GENFILES	= $(OBJECTS) archtable.h dpkg dpkg-static
 
-QUERY_SOURCES	= query.c showpkg.c filesdb.c errors.c 
+QUERY_SOURCES	= query.c filesdb.c errors.c 
 QUERY_OBJECTS	= $(patsubst %.c, %.o, $(QUERY_SOURCES))
 QUERY_GENFILES	= $(QUERY_OBJECTS) dpkg-query
 
