--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ lib/myopt.c
 lib/parse.c
 lib/parsehelp.c
 lib/showcright.c
+lib/showpkg.c
 lib/varbuf.c
 
 main/archives.c
@@ -30,7 +31,6 @@ main/select.c
 main/update.c
 
 main/query.c
-main/showpkg.c
 
 dpkg-deb/build.c
 dpkg-deb/extract.c
