--- a/debian/rules
+++ b/debian/rules
@@ -72,6 +72,7 @@ stamp-binary: stamp-build
 binary-dpkg-static-most:	TMP_DPKG=$(TMP)/dpkg-static
 binary-dpkg-static-most:	static=-static
 binary-dpkg-static:		TMP_DPKG=$(TMP)/dpkg-static
+binary-dpkg-static:		static=-static
 
 binary-dpkg-most binary-dpkg-static-most: binary-dpkg%-most: stamp-binary%
 	rm -rf $(TMP_DPKG)
