Remove dulicate inclusion of utils in SUBDIRS.

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ GENFILES	= version.h
 include Makefile.conf
 
 SUBDIRS		= include optlib lib intl dpkg-deb split scripts utils main \
-		  utils @DSELECTDIR@ po methods doc
+		  @DSELECTDIR@ po methods doc
 
 all: version.h all-recursive
 
