Install new Swedish manpages

--- a/doc/sv/Makefile.in
+++ b/doc/sv/Makefile.in
@@ -8,9 +8,9 @@ svman1dir	= $(subst $(mandir),$(mandir)/sv,$(man1dir))
 svman5dir	= $(subst $(mandir),$(mandir)/sv,$(man5dir))
 svman8dir	= $(subst $(mandir),$(mandir)/sv,$(man8dir))
 
-MAN1PAGES	= md5sum.1 822-date.1
+MAN1PAGES	= md5sum.1 822-date.1 dpkg-deb.1
 MAN5PAGES	= deb.5 deb-control.5 deb-old.5
-MAN8PAGES	= dpkg.8 dselect.8 start-stop-daemon.8 dpkg-split.8
+MAN8PAGES	= dpkg.8 dselect.8 start-stop-daemon.8 dpkg-split.8 dpkg-query.8
 
 all: 
 
