Add lib/utils.c with general utility functions. Add cisalpha() and cisdigit() functions, similar to the ctype is* ones but which only accept C locale

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -293,4 +293,9 @@ extern volatile int onerr_abort;
 struct cmdinfo;
 void showcopyright(const struct cmdinfo*, const char*);
 
+/*** from utils.c ***/
+
+int cisdigit(int c);
+int cisalpha(int c);
+
 #endif /* DPKG_H */
