create parts directory

--- a/split/Makefile.in
+++ b/split/Makefile.in
@@ -32,6 +32,7 @@ install:: install-program install-doc
 install-program:
 	$(mkinstalldirs) $(DESTDIR)/$(bindir)
 	$(INSTALL) dpkg-split $(DESTDIR)$(bindir)
+	$(mkinstalldirs) $(DESTDIR)/$(admindir)/parts
 	$(mkinstalldirs) $(DESTDIR)/$(dpkglibdir)
 	$(INSTALL) $(srcdir)/mksplit.pl $(DESTDIR)/$(dpkglibdir)/mksplit
 
