--- a/configure.in
+++ b/configure.in
@@ -105,7 +105,7 @@ AC_DEFINE_UNQUOTED(ARCHITECTURE, "${dpkg_archset}")
 
 dnl gettext
 
-ALL_LINGUAS="cs da de en es fr gl it nl ja pl pt_BR ru sv"
+ALL_LINGUAS="ca cs da de en es fr gl it nl ja pl pt_BR ru sv"
 AM_GNU_GETTEXT
 
 dnl Other stuff
