--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ GENFILES	= version.h
 include Makefile.conf
 
 SUBDIRS		= include optlib lib intl dpkg-deb split scripts utils main \
-		  @DSELECTDIR@ po methods doc
+		  @DSELECTDIR@ po methods man doc
 
 all: version.h all-recursive
 
