Remove files that moved to man/

--- a/doc/fr/Makefile.in
+++ b/doc/fr/Makefile.in
@@ -20,11 +20,9 @@ all:
 clean: 
 
 distclean: clean 
-	rm -f Makefile
+	$(RM) -f Makefile
 
 install: install-doc
-
-install-program:
 
 install-doc:
 	$(mkinstalldirs) $(DESTDIR)$(frman1dir) 
