Remove Japanese manpages which are in man/ now

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -2,7 +2,7 @@ VPATH		= @srcdir@
 srcdir		= @srcdir@
 top_srcdir	= @top_srcdir@
 
-SUBDIRS		= ja ru sv
+SUBDIRS		= ru sv
 
 include ../Makefile.conf
 
