Added Brazilian manpage translations

--- a/configure.in
+++ b/configure.in
@@ -255,6 +255,13 @@ doc/fr/Makefile
 doc/ja/Makefile
 doc/ru/Makefile
 doc/sv/Makefile
+man/Makefile
+man/de/Makefile
+man/en/Makefile
+man/fr/Makefile
+man/ja/Makefile
+man/ru/Makefile
+man/sv/Makefile
 scripts/Makefile
 main/Makefile
 dselect/Makefile
