Changed maintainer to debian-dpkg@lists and add Uploaders

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: dpkg
 Section: base
 Priority: required
-Maintainer: Wichert Akkerman <wakkerma@debian.org>
+Maintainer: Dpkg Development <debian-dpkg@lists.debian.org>
+Uploaders: Wichert Akkerman <wakkerma@debian.org>, Adam Heath <doogie@debian.org>
 Origin: debian
 Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
