Add dselect.cfg and dpkg.cfg manpages

--- a/man/en/Makefile.in
+++ b/man/en/Makefile.in
@@ -4,7 +4,7 @@ top_srcdir	= @top_srcdir@
 
 include ../../Makefile.conf
 
-MAN5PAGES	= deb-control.5 deb-old.5 deb.5
+MAN5PAGES	= deb-control.5 deb-old.5 deb.5 dpkg.cfg.5 dselect.cfg.5
 
 all:
 
