Bad Wichert.  Always modify configure.in when adding subdirs(add pt_BR).

--- a/configure.in
+++ b/configure.in
@@ -257,6 +257,7 @@ man/fr/Makefile
 man/ja/Makefile
 man/ru/Makefile
 man/sv/Makefile
+man/pt_BR/Makefile
 scripts/Makefile
 main/Makefile
 dselect/Makefile
