use @PACKAGE@ for dpkgconfdir as well

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -31,7 +31,7 @@ man5dir			= $(mandir)/man5
 man8dir			= $(mandir)/man8
 
 sysconfdir		= @sysconfdir@
-dpkgconfdir		= $(sysconfdir)/dpkg
+dpkgconfdir		= $(sysconfdir)/$(PACKAGE)
 alternativesdir		= $(sysconfdir)/alternatives
 
 PERL			= @PERL@
