--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -2,7 +2,7 @@
  * libdpkg - Debian packaging suite library routines
  * dpkg.h - general header for Debian package handling
  *
- * Copyright (C) 1994,1995 Ian Jackson <ian.greenend.org.uk>
+ * Copyright (C) 1994,1995 Ian Jackson <ian@chiark.greenend.org.uk>
  * Copyright (C) 2000,2001 Wichert Akkerman <wichert@debian.org>
  *
  * This is free software; you can redistribute it and/or modify
