Removed another needed file

--- a/.cvsignore
+++ b/.cvsignore
@@ -5,10 +5,10 @@ aclocal.m4
 config.h.in
 configure
 missing
-mkinstalldirs
 stamp-h.in
 intl
 config.log
+config.status
 build
 stamp-build
 stamp-binary
