Fix targets, so that if configure fails, but actually succeeds in creating config.status(as might happen if one has a c-style comment in configure.in, and the shell trys running /foo), then the build will actually fail correctly.

--- a/debian/rules
+++ b/debian/rules
@@ -25,7 +25,7 @@ endif
 BUILD-DIRS	:= $(BUILD) $(BUILD)-static
 
 # Setup the buildlocation
-$(BUILD)/config.status:
+$(BUILD)/configure-stamp:
 	$(checkdir)
 	install -d $(@D)
 	cd $(@D) && LDFLAGS=$(LDFLAGS) $(DIR)/configure \
@@ -40,6 +40,7 @@ $(BUILD)/config.status:
 		--with-zlib=static \
 		--with-static-progs \
 		$(config_arg)
+	touch $@
 
 clean:
 	$(checkdir)
@@ -51,7 +52,7 @@ clean:
 
 build: stamp-build
 
-stamp-build: $(BUILD)/config.status
+stamp-build: $(BUILD)/configure-stamp
 	$(MAKE) $(MFLAGS) -C $(BUILD)
 #	touch $@
 
