If automake/*.m4 is modified, rebuild aclocal.m4.  If aclocal.m4 or configure.in are modified, rebuild configure.in.  config.h.in gets rebuilt if configure.in is modified.  And, lastly, configure is rerun, if configure or config.h.in is modified.

--- a/debian/rules
+++ b/debian/rules
@@ -24,8 +24,17 @@ endif
 
 BUILD-DIRS	:= $(BUILD) $(BUILD)-static
 
+aclocal.m4: $(wildcard automake/*.m4)
+	aclocal.m4 -I automake
+
+configure: configure.in aclocal.m4
+	autoconf
+
+config.h.in: configure.in
+	autoheader
+
 # Setup the buildlocation
-$(BUILD)/configure-stamp:
+$(BUILD)/configure-stamp: configure config.h.in
 	$(checkdir)
 	install -d $(@D)
 	cd $(@D) && LDFLAGS=$(LDFLAGS) $(DIR)/configure \
